AVXL Gain: $ 10.3 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3
AVXL Gain: $ 0.51 Win %: 60.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_TR_QP_DB15
AVXL Gain: $ 7.51 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_TR_DB15
AVXL Gain: $ -17.14 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_AV_DB15
AVXL Gain: $ 9.24 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_AL_DB15
AVXL Gain: $ -3.15 Win %: 20.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_QP_DB15
AVXL Gain: $ 4.57 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM_TR_DB15
AVXL Gain: $ 2.43 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM_AV_DB15
AVXL Gain: $ -0.88 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM_QP_DB15
AVXL Gain: $ 2.01 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_IT_QL_DB15
AVXL Gain: $ -0.24 Win %: 20.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_IT_QP_DB15
AVXL Gain: $ 6.68 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_TR_IR4
AVXL Gain: $ 0.19 Win %: 60.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_TR_QP
AVXL Gain: $ -12.58 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_QP_IR4
AVXL Gain: $ 4.2 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_TR
AVXL Gain: $ -21.3 Win %: 20.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_AV
AVXL Gain: $ 4.4 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_AL
AVXL Gain: $ -1.15 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV_QP
AVXL Gain: $ 4.33 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM_TR
AVXL Gain: $ 1.49 Win %: 60.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM_AV
AVXL Gain: $ -1.3 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM_QP
AVXL Gain: $ 1.22 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_IT_QL
AVXL Gain: $ -0.79 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_IT_QP
AVXL Gain: $ -17.77 Win %: 20.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_AO_AC
AVXL Gain: $ -0.03 Win %: 60.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_QP_PM
AVXL Gain: $ 6.21 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_RV
AVXL Gain: $ 9.33 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_IR4
AVXL Gain: $ 8.19 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_TR
AVXL Gain: $ -17.83 Win %: 20.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_AV
AVXL Gain: $ 9.78 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_AL
AVXL Gain: $ -1.23 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_VI
AVXL Gain: $ 7.9 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_LI
AVXL Gain: $ 0.35 Win %: 60.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_QP
AVXL Gain: $ 4.36 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_HM
AVXL Gain: $ 10.3 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_SS
AVXL Gain: $ 10.57 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_QL
AVXL Gain: $ 9.95 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_DB15
AVXL Gain: $ 5.34 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_AO
AVXL Gain: $ -0.02 Win %: 40.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_AC
AVXL Gain: $ 0.95 Win %: 80.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_IT
AVXL Gain: $ Win %: 60.00 in 5 days with algo TB2_HL_HS_QM_OB3_OS3_CB3_CS3_PM
AVXL Gain: $ 0.32 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_TR_QP_DB8
AVXL Gain: $ 8.24 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_TR_DB8
AVXL Gain: $ 9.57 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_AV_DB8
AVXL Gain: $ 7.38 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_AL_DB8
AVXL Gain: $ -0.14 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_QP_DB8
AVXL Gain: $ 12.05 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM_TR_DB8
AVXL Gain: $ 10.78 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM_AV_DB8
AVXL Gain: $ -0.37 Win %: 20.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM_QP_DB8
AVXL Gain: $ 8.58 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_IT_QL_DB8
AVXL Gain: $ 0.01 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_IT_QP_DB8
AVXL Gain: $ 8.24 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_TR_IR2
AVXL Gain: $ 0.39 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_TR_QP
AVXL Gain: $ 0.48 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_QP_IR2
AVXL Gain: $ 8.44 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_TR
AVXL Gain: $ 9.77 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_AV
AVXL Gain: $ 7.58 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_AL
AVXL Gain: $ -0.07 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV_QP
AVXL Gain: $ 4.87 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM_TR
AVXL Gain: $ 8.49 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM_AV
AVXL Gain: $ -0.48 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM_QP
AVXL Gain: $ 8.78 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_IT_QL
AVXL Gain: $ -0.1 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_IT_QP
AVXL Gain: $ 1.82 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_AO_AC
AVXL Gain: $ -0.02 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_QP_PM
AVXL Gain: $ 9.41 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_RV
AVXL Gain: $ 8.61 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_IR2
AVXL Gain: $ 8.41 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_TR
AVXL Gain: $ 8 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_AV
AVXL Gain: $ 7.2 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_AL
AVXL Gain: $ 0.7 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_VI
AVXL Gain: $ 2.75 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_LI
AVXL Gain: $ -0.12 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_QP
AVXL Gain: $ 5.33 Win %: 60.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_HM
AVXL Gain: $ 7.49 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_SS
AVXL Gain: $ 8.78 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_QL
AVXL Gain: $ 8.58 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_DB8
AVXL Gain: $ -0.63 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_AO
AVXL Gain: $ 5.71 Win %: 40.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_AC
AVXL Gain: $ 8.78 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_IT
AVXL Gain: $ -0.02 Win %: 80.00 in 5 days with algo TB4_HL_HI_QM_OB5_OS5_CB4_CS4_PM
AVXL Gain: $ -10.52 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB8
AVXL Gain: $ 2.79 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB8
AVXL Gain: $ 8.1 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB8
AVXL Gain: $ 9.34 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB8
AVXL Gain: $ -10.39 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB8
AVXL Gain: $ 1.89 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB8
AVXL Gain: $ 2.91 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB8
AVXL Gain: $ -11.65 Win %: 0 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB8
AVXL Gain: $ -4.66 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB8
AVXL Gain: $ -6.79 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB8
AVXL Gain: $ 3.08 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_TR_IR2
AVXL Gain: $ -3.48 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_TR_QP
AVXL Gain: $ -4.81 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_QP_IR2
AVXL Gain: $ 10.18 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_TR
AVXL Gain: $ -3.75 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_AV
AVXL Gain: $ 8.3 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_AL
AVXL Gain: $ -4.1 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV_QP
AVXL Gain: $ 1.83 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM_TR
AVXL Gain: $ 5.81 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM_AV
AVXL Gain: $ -15.43 Win %: 0 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM_QP
AVXL Gain: $ 8.15 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_IT_QL
AVXL Gain: $ -5.78 Win %: 0 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_IT_QP
AVXL Gain: $ 8.66 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_AO_AC
AVXL Gain: $ -5.33 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_QP_PM
AVXL Gain: $ 10.3 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_RV
AVXL Gain: $ 10.85 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_IR2
AVXL Gain: $ 9.62 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_TR
AVXL Gain: $ -5.67 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_AV
AVXL Gain: $ 7.48 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_AL
AVXL Gain: $ 3.31 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_VI
AVXL Gain: $ 6.72 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_LI
AVXL Gain: $ -5.29 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_QP
AVXL Gain: $ 2.07 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_HM
AVXL Gain: $ 4.47 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_SS
AVXL Gain: $ 8.1 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_QL
AVXL Gain: $ 0.5 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_DB8
AVXL Gain: $ 8.66 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_AO
AVXL Gain: $ 8.66 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_AC
AVXL Gain: $ 8.71 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_IT
AVXL Gain: $ 2.1 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB2_OS2_CB5_CS5_PM
AVXL Gain: $ -10.52 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
AVXL Gain: $ 2.79 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
AVXL Gain: $ 8.1 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
AVXL Gain: $ 9.34 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
AVXL Gain: $ -10.39 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
AVXL Gain: $ 1.89 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
AVXL Gain: $ 2.91 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
AVXL Gain: $ -11.65 Win %: 0 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
AVXL Gain: $ -4.66 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
AVXL Gain: $ -6.79 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
AVXL Gain: $ 3.08 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_TR_IR2
AVXL Gain: $ -3.48 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_TR_QP
AVXL Gain: $ -4.81 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_QP_IR2
AVXL Gain: $ 10.18 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_TR
AVXL Gain: $ -3.75 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_AV
AVXL Gain: $ 8.3 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_AL
AVXL Gain: $ -4.1 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV_QP
AVXL Gain: $ 1.83 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM_TR
AVXL Gain: $ 5.81 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM_AV
AVXL Gain: $ -15.43 Win %: 0 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM_QP
AVXL Gain: $ 8.15 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_IT_QL
AVXL Gain: $ -5.78 Win %: 0 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_IT_QP
AVXL Gain: $ 8.66 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_AO_AC
AVXL Gain: $ -5.33 Win %: 20.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_QP_PM
AVXL Gain: $ 10.3 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_RV
AVXL Gain: $ 10.85 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_IR2
AVXL Gain: $ 9.62 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_TR
AVXL Gain: $ -5.67 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_AV
AVXL Gain: $ 7.48 Win %: 80.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_AL
AVXL Gain: $ 3.31 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_VI
AVXL Gain: $ 6.72 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_LI
AVXL Gain: $ -5.29 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_QP
AVXL Gain: $ 2.07 Win %: 40.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_HM
AVXL Gain: $ 4.47 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_SS
AVXL Gain: $ 8.1 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_QL
AVXL Gain: $ 0.5 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_DB8
AVXL Gain: $ 8.66 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_AO
AVXL Gain: $ 8.66 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_AC
AVXL Gain: $ 8.71 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_IT
AVXL Gain: $ 2.1 Win %: 60.00 in 5 days with algo TB4_HI_QM_OB1_OS1_CB5_CS5_PM
